--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,10 @@ body {
     background-position: 50% 10%;
 }
 
+.outer__container {
+    position: absolute;
+}
+
 .cube__container {
     perspective: 600px;
 }
@@ -37,6 +41,8 @@ body {
     width: 40px;
     height: 40px;
     position: relative;
+    top: 15em;
+    left: 15em;
     transform-style: preserve-3d;
     transform: translateZ(-20px);
     transition: transform 1s;
