--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,10 +18,10 @@ body {
     align-content: center;
 }
 
-.background__div {
+/*.background__div {
     background-image: url("/Users/casvalkyriespicer/Documents/GitHub/animated-shape/pics/retro-paper.jpeg");
     background-color: rgb(9, 207, 241);
-    /*background-blend-mode: multiply;*/
+    
     opacity: .8;
     width: 100%;
     min-height: 100vh;
@@ -31,10 +31,10 @@ body {
     justify-content: center;
     align-content: center;
     margin: 0 auto;
-}
+}*/
 
 .outer__container {
-    position: relative;
+    margin-top: 10em;
     justify-content: center;
     align-content: center;
     margin: 0 auto;
@@ -52,7 +52,7 @@ body {
 .cube__container {
     width: 40px;
     height: 40px;
-    position: absolute;
+    position: relative;
     
     transform-style: preserve-3d;
     transform: translateZ(-20px);
