--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,10 +18,9 @@ body {
     align-content: center;
 }
 
-/*.background__div {
+.background__div {
     background-image: url("/Users/casvalkyriespicer/Documents/GitHub/animated-shape/pics/retro-paper.jpeg");
     background-color: rgb(9, 207, 241);
-    
     opacity: .8;
     width: 100%;
     min-height: 100vh;
@@ -31,18 +30,21 @@ body {
     justify-content: center;
     align-content: center;
     margin: 0 auto;
-}*/
+}
 
 .outer__container {
-    margin-top: 10em;
+    text-align: center;
     justify-content: center;
     align-content: center;
     margin: 0 auto;
     border: 2px solid green;
+    height: 1000px;
+    width: 1000px;
 }
 
 .cube__container {
-    perspective: 600px;
+    margin-top: 10em;
+    perspective: 900px;
     justify-content: center;
     align-content: center;
     margin: 0 auto;
@@ -52,8 +54,7 @@ body {
 .cube__container {
     width: 40px;
     height: 40px;
-    position: relative;
-    
+    position: relative; 
     transform-style: preserve-3d;
     transform: translateZ(-20px);
     transition: transform 1s;
